# the-altman-index

./: .gitignore  Makefile  README.md  RENDER_DEPLOY_NOTES.md  architecture-readme.md  docker-compose.yml  next-steps.md  pyproject.toml  render.yaml  services.yml
apps/backend/: Dockerfile  pyproject.toml
apps/backend/src/rag_backend/: chunk_store.py  config.py  constants.py  llm.py  main.py  models.py  retriever.py
apps/backend/tests/: test_retriever.py
apps/frontend/: README.md  frontend-prd.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
apps/ingestion/: Dockerfile  pyproject.toml
apps/ingestion/src/rag_ingestion/: audit.py  chunk_enrichment.py  cli.py  config.py  embeddings.py  enrichment.py  indexer.py  main.py  manifest.py  pipeline.py  secondary_embeddings.py  transcript.py
apps/ingestion/tests/: conftest.py  test_chunk_enrichment.py  test_cli_inspect.py  test_document_enrichment.py  test_secondary_embeddings.py  test_transcript_normalizer.py
backend/: requirements.txt
backend/app/: chunk_store.py  config.py  constants.py  llm.py  logging_utils.py  main.py  retriever.py
config/: backend.yaml  ingestion.yaml
data/metadata/: 20150210_sam_altman_how_to_get_funded_by_y_combinator.json  20161107_private_tech_markets_half_full_or_half_empty_sam_altman_and_roelof_botha_debate.json  20161115_mosaic_ventures_fireside_chat_with_y_combinator_president_sam_altman.json  (+103 more)
docs/: HOW_TO_TRY_RAG_BACKEND.md  README.md  anchor_chunking_embedding_prd.md  chunk_enrichment_instructions.md  config_artifacts_prd.md  data-flow.md  enrichment_cache_runbook.md  ingestion_and_embedding_pipeline_prd.md  orchestration_monitoring_prd.md  phase1_plan.md  prd_phase2_phase3.md  rag_project_readme.md  rich_metadata_retrieval_prd.md
frontend/: .gitignore  package.json
ingestion/: Dockerfile  requirements.txt
libs/python/core/: pyproject.toml
libs/python/core/src/rag_core/: __init__.py  config.py  logging.py  paths.py  schema_versions.py
scripts/: upload-to-render.sh
var/: README.md
(+137 files in other folders)
