[project]
name = "query-sam-altman"
version = "0.1.0"
description = "Mono-repo workspace for the Query Sam Altman project"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
  "apps/backend",
  "apps/ingestion",
  "libs/python/core",
]

[tool.uv.sources]
rag-core = { workspace = true }
