[project]
name = "rag-backend"
version = "0.1.0"
description = "FastAPI RAG backend service"
requires-python = ">=3.11"
dependencies = [
  "chromadb==0.4.24",
  "numpy<2",
  "fastapi==0.110.0",
  "openai>=1.40.0,<2",
  "pandas==2.2.2",
  "pyarrow==16.1.0",
  "pydantic==2.7.0",
  "pyyaml==6.0.1",
  "uvicorn[standard]==0.29.0",
  "rag-core>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/rag_backend"]
